--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,6 +13,10 @@
   position: relative;
   flex: 1;
   display: flex;
+  height: 40px;
+  @media (max-width: 768px) {
+    height: 30px;
+  }
 }
 
 .input {
@@ -22,6 +26,10 @@
   flex: 1;
   border-radius: 10px;
   border: 0.5px solid gray;
+  font-size: 16px;
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
 }
 
 .input:focus {
@@ -40,7 +48,6 @@
 .searchOverlay {
   position: absolute;
   z-index: 9999999;
-  top: 60px;
   left: 0;
   width: 100%;
   transition: top 0.4s ease-in-out;
@@ -61,7 +68,7 @@
 }
 
 .slideDown {
-  top: 60px; /* slide down animation */
+  top: 80px; /* slide down animation */
 }
 
 .slideUp {
@@ -108,7 +115,10 @@
   background-color: white;
   border-radius: 7px;
   border: 1px solid gray;
-  padding: 3px 10px;
+  padding: 6px 10px;
+  @media (max-width: 768px) {
+      padding: 3px 10px;
+  }
 }
 
 .close {
