--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,19 +13,22 @@
   position: relative;
   flex: 1;
   display: flex;
-  height: 40px;
+  height: 45px;
+
   @media (max-width: 768px) {
     height: 30px;
   }
 }
 
 .input {
-  padding-left: 35px;
+  padding-left: 38px;
   padding-right: 75px;
   padding-block: 8px;
   flex: 1;
   border-radius: 10px;
   border: 0.5px solid gray;
+  box-shadow: 0px 4px 4px 0px #00000040;
+
   font-size: 16px;
   @media (max-width: 768px) {
     font-size: 12px;
@@ -58,9 +61,9 @@
   border-radius: 5px;
   min-height: 300px;
   max-height: calc(100vh - 2em);
-  margin-inline: 1em;
   flex: 1;
   display: flex;
+  box-shadow: 0px 4px 10px 0px #00000040;
 
   @media (max-width: 768px) {
     margin-inline: 0.3em;
@@ -83,9 +86,10 @@
   background-color: white;
   color: black;
   border: 1px solid rgba(255, 255, 255, 0.7);
-  box-shadow: 0px -9px 30px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px -9px 30px rgba(0, 0, 0, 0.5); */
   font-size: 18px;
   overflow-y: auto;
+  border: 1px solid #0000004d;
 
   @media (max-width: 768px) {
     padding: 1em 0.7em;
