--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -58,16 +58,13 @@
 }
 
 .searchResultBox {
-  border-radius: 5px;
+  border-radius: 10px;
   min-height: 300px;
   max-height: calc(100vh - 2em);
   flex: 1;
   display: flex;
   box-shadow: 0px 4px 10px 0px #00000040;
-
-  @media (max-width: 768px) {
-    margin-inline: 0.3em;
-  }
+  border: 1px solid #0000004d;
 }
 
 .slideDown {
@@ -81,7 +78,7 @@
 .innerSearch {
   flex: 1;
   border-radius: 10px;
-  padding: 1em 3em;
+  padding: 0.5em 1.5em;
   /* backdrop-filter: brightness(0.4) blur(15px); */
   background-color: white;
   color: black;
@@ -89,7 +86,6 @@
   /* box-shadow: 0px -9px 30px rgba(0, 0, 0, 0.5); */
   font-size: 18px;
   overflow-y: auto;
-  border: 1px solid #0000004d;
 
   @media (max-width: 768px) {
     padding: 1em 0.7em;
@@ -153,7 +149,7 @@
 .message {
   margin-bottom: 2em;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 
   @media (max-width: 768px) {
     font-size: 14px;
@@ -214,7 +210,7 @@
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-line-clamp: 1; /* number of lines to show */
   line-clamp: 2;
   -webkit-box-orient: vertical;
   box-orient: vertical;
@@ -230,8 +226,8 @@
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   box-orient: vertical;
   @media (max-width: 768px) {
@@ -243,6 +239,13 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 18px;
+  height: 18px;
 }
 
 .buttonContainer {
