--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,381 +1,222 @@
-/* add css module styles here (optional) */
-
-.container {
-  font-size: 2em;
-  width: 100%;
+.searchWrapper {
+  min-width: 375px;
+  height: 41px;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+  gap: 15px;
+  position: fixed;
+  bottom: 120px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.toggleTrigger {
+  width: 45px;
+  height: 41px;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+  border: double 3px transparent;
+  background-image: linear-gradient(white, white),
+    linear-gradient(to right, #e0e0e0, #f0f0f0);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.inputContainer {
+.searchContainer {
+  flex: 1;
+  order: 2;
   position: relative;
-  flex: 1;
-  display: flex;
-  height: 45px;
-
-  @media (max-width: 768px) {
-    height: 30px;
-  }
 }
 
-.input {
-  padding-left: 38px;
-  padding-right: 75px;
-  padding-block: 8px;
-  flex: 1;
-  border-radius: 10px;
-  border: 0.5px solid gray;
-  box-shadow: 0px 4px 4px 0px #00000040;
-
-  font-size: 16px;
-  @media (max-width: 768px) {
-    font-size: 12px;
-  }
-}
-
-.input:focus {
-  outline: none;
-}
-
-.input::placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease; /* Adjust the duration and timing function as needed */
-}
-
-.input.placeholderHidden::placeholder {
-  opacity: 0;
-}
-
-.searchOverlay {
+.aiSearchBarHeader {
   position: absolute;
-  z-index: 9999999;
+  top: 0rem;
+  transition-duration: 0.5s;
   left: 0;
+  height: 38px;
+  width: 0px;
+  overflow: hidden;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%) border-box;
+  border-radius: 25px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+.aiSearchBarHeader.expanded {
   width: 100%;
-  transition: top 0.4s ease-in-out;
+  border: 3px solid transparent;
+  padding: 3px;
+  animation: expandWidth 1.2s ease forwards;
+}
+.aiSearchBarHeader.slideTop {
+  animation: slideUp 1s ease forwards;
+}
+
+.searchInputWrapper {
   display: flex;
-}
-
-.searchResultBox {
-  border-radius: 10px;
-  min-height: 300px;
-  max-height: calc(100vh - 2em);
-  margin-inline: 4em;
-  flex: 1;
-  display: flex;
-  box-shadow: 0px 4px 10px 0px #00000040;
-  border: 1px solid #0000004d;
-  @media (max-width: 768px) {
-    margin-inline: 0.3em;
-  }
-}
-
-.slideDown {
-  top: var(--top-position); /* slide down animation */
-}
-
-.slideUp {
-  top: -1000px; /* slide up animation */
-}
-
-.innerSearch {
-  flex: 1;
-  border-radius: 10px;
-  padding: 0.5em 1.5em;
-  /* backdrop-filter: brightness(0.4) blur(15px); */
-  background-color: white;
-  color: black;
-  border: 1px solid rgba(255, 255, 255, 0.7);
-  /* box-shadow: 0px -9px 30px rgba(0, 0, 0, 0.5); */
-  font-size: 18px;
-  overflow-y: auto;
-
-  @media (max-width: 768px) {
-    padding: 1em 0.7em;
-  }
-}
-
-.innerSearch.light {
-  /* backdrop-filter: brightness(15) blur(20px); */
-  border: 1px solid rgba(0, 0, 0, 0.7);
-  background-color: white;
-  /* color: black; */
-  color: white;
-}
-
-.innerSearch.centerAlign {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  text-align: center;
-}
-
-.searchIcon {
-  position: absolute;
-  top: 50%;
-  transform: translate(50%, -50%);
-  /* left: 5px; */
-}
-
-.sendButton {
-  position: absolute;
-  top: 50%;
-  transform: translate(-13%, -50%);
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  border-radius: 7px;
-  border: 1px solid gray;
-  padding: 6px 10px;
-  @media (max-width: 768px) {
-    padding: 3px 10px;
-  }
-}
-
-.close {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  transform: translate(-340%, -50%);
-  right: 0;
-}
-
-.sendButton.iconActive {
-  cursor: pointer;
-  background-color: black;
-  border-radius: 7px;
-  border: 1px solid black;
-}
-
-.message {
-  margin-bottom: 2em;
-  font-size: 16px;
-  font-weight: 400;
-
-  @media (max-width: 768px) {
-    font-size: 14px;
-  }
-}
-
-.cardContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 10px;
-  row-gap: 15px;
-  margin-bottom: 2em;
-
-  @media (max-width: 768px) {
-    grid-template-columns: repeat(1, 1fr);
-    row-gap: 5px;
-  }
-}
-
-.singleCard {
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  padding: 0.5em;
-  border-radius: calc(5px + 0.5em);
-  text-decoration: none;
-  background-color: rgba(198, 198, 198, 0.2);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  height: 100%;
   opacity: 0;
-  animation: fadeIn 0.5s ease forwards;
-  animation-delay: calc(0.3s * var(--index));
-  color: black;
+  white-space: nowrap;
+  gap: 5px;
+}
+
+.aiSearchBarHeader.expanded .searchInputWrapper {
+  opacity: 1;
+  width: 100%;
+  transition-delay: 5s;
+}
+
+.imageIcon {
+  color: #666;
+  font-size: 20px;
+  cursor: pointer;
+  padding-top: 2px;
+}
+.imageIconRounded {
+  color: #666;
+  font-size: 20px;
+  cursor: pointer;
+  padding-left: 10px;
+}
+.searchIcon {
+  color: #666;
+  font-size: 20px;
+  cursor: pointer;
+  padding-right: 10px;
+}
+.aiSearchBarInput {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  background: transparent;
+  min-width: 0;
+  color: transparent;
+  background: linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  caret-color: #000;
+}
+
+.aiSearchBarInput::placeholder {
+  color: transparent;
+  background: linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.aiSearchResultsContainer {
+  background-color: #ffffffbf;
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 16px;
+  display: none;
+  width: 100%;
+  position: absolute;
+  opacity: 0;
+  bottom: 100%;
+  z-index: -90;
+  height: 250px;
+
+  border-image-source: linear-gradient(
+    90deg,
+    #2c9adf 0%,
+    #6385d4 50%,
+    #ce6882 100%
+  );
+}
+.aiSearchResultsContainer.visibile {
+  animation: visibility 0.8s ease forwards;
+}
+
+.aiSearchResultsContainer::-webkit-scrollbar-button {
+  display: none !important;
+}
+
+.aiSearchBarResponse {
+  margin: 12px;
+  height: 100%;
   position: relative;
 }
 
-.singleCard.light {
-  color: black;
-  background-color: rgba(0, 0, 0, 0.1);
+.hideOverFlow {
+  overflow-y: auto;
+  height: 85%;
+  scrollbar-width: thin;
+  scrollbar-color: #ffffff4d;
+  padding: 8px;
 }
 
-.singleCard img {
-  height: 90px;
-  width: 90px;
-  border-radius: 5px;
-  margin-right: 20px;
-
-  @media (max-width: 768px) {
-    height: 60px;
-    width: 60px;
-    margin-right: 20px;
-  }
+.aiSearchBarResponse p {
+  color: #000;
+  font-size: 14px;
+  line-height: 16.8px;
+  padding-bottom: 16px;
 }
 
-.content h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-size: 18px;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 1; /* number of lines to show */
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-  box-orient: vertical;
-  padding-right: 20px;
-  @media (max-width: 768px) {
-    font-size: 16px;
-  }
+.aiSearchBarLink {
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
 
-.content p {
+.aiSearchBarLinkContent {
+  flex: 1;
+}
+
+.description {
   margin: 0;
-  font-size: 16px;
+  font-size: 14px;
+  margin-left: 23px;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
-  line-clamp: 3;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   box-orient: vertical;
-  @media (max-width: 768px) {
-    font-size: 12px;
-  }
+}
+
+.aiSearchBarLink a {
+  color: #000;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.aiSearchBarLink p {
+  color: #000;
+  font-size: 13px;
+  margin: 0;
 }
 
 .linkIcon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: black;
-  border-radius: 50%;
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-  width: 18px;
-  height: 18px;
-}
-
-.buttonContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-  margin-bottom: 1em;
-}
-
-.suggested {
-  font-size: 14px;
-  margin: 0;
-  margin-bottom: 1em;
-  color: #ffffff;
-}
-
-.suggested.light {
-  color: #000000;
-}
-
-.followUp {
-  animation: fadeIn 0.5s ease forwards;
-  animation-delay: calc(0.3s * var(--index));
-  background-color: grey;
-  border-radius: 10px;
-  color: #ffffff;
-  cursor: pointer;
-  opacity: 0;
-  padding: 0.5em 1em;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  background-color: rgba(0, 0, 0, 0.2);
-  font-size: 14px;
-  text-align: start;
-}
-
-.followUp.light {
-  color: #000000;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.loader {
-  animation: rotate 1s infinite;
-  height: 50px;
-  width: 50px;
-}
-
-.loader:before,
-.loader:after {
+  background: #e4dcdcbf;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   border-radius: 50%;
-  content: '';
-  display: block;
-  height: 20px;
   width: 20px;
-}
-.loader:before {
-  animation: ball1 1s infinite;
-  background-color: #fff;
-  box-shadow: 30px 0 0 #ff3d00;
-  margin-bottom: 10px;
-}
-.loader:after {
-  animation: ball2 1s infinite;
-  background-color: #ff3d00;
-  box-shadow: 30px 0 0 #fff;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg) scale(0.8);
-  }
-  50% {
-    transform: rotate(360deg) scale(1.2);
-  }
-  100% {
-    transform: rotate(720deg) scale(0.8);
-  }
-}
-
-@keyframes ball1 {
-  0% {
-    box-shadow: 30px 0 0 #ff3d00;
-  }
-  50% {
-    box-shadow: 0 0 0 #ff3d00;
-    margin-bottom: 0;
-    transform: translate(15px, 15px);
-  }
-  100% {
-    box-shadow: 30px 0 0 #ff3d00;
-    margin-bottom: 10px;
-  }
-}
-
-@keyframes ball2 {
-  0% {
-    box-shadow: 30px 0 0 #fff;
-  }
-  50% {
-    box-shadow: 0 0 0 #fff;
-    margin-top: -20px;
-    transform: translate(15px, 15px);
-  }
-  100% {
-    box-shadow: 30px 0 0 #fff;
-    margin-top: 0;
-  }
+  height: 20px;
 }
 
 .skeletonSquare {
   display: block;
-  width: 50%;
-  height: 150px;
+  width: 100%;
+  height: 50px;
   background: linear-gradient(
     -90deg,
     rgba(100, 99, 99, 0.1) 25%,
@@ -392,7 +233,7 @@
   display: block;
   width: 100%;
   flex: 1;
-  height: 55px;
+  height: 95px;
   margin: 8px 0;
   background: linear-gradient(
     -90deg,
@@ -404,6 +245,48 @@
   animation: skeleton-loading 1.5s infinite;
   border-radius: 4px;
 }
+
+@keyframes slideUp {
+  0% {
+    top: 0rem;
+  }
+  100% {
+    top: -19.5rem;
+  }
+}
+@keyframes expandWidth {
+  0% {
+    width: 30%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes visibility {
+  0% {
+    opacity: 0;
+    bottom: -60%;
+  }
+
+  25% {
+    opacity: 0.2;
+    bottom: -60%;
+  }
+
+  50% {
+    opacity: 0.4;
+  }
+
+  75% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+    bottom: 100%;
+  }
+}
 @keyframes skeleton-loading {
   0% {
     background-position: 200% 0;
@@ -413,14 +296,23 @@
   }
 }
 
-.hideOnSmall {
-  display: block;
-}
-.skeletonLine {
-  width: 100%;
-}
 .skeletonSquareContainer {
-  display: flex;
   width: 100%;
-  gap: 12px;
+  height: 100%;
+}
+
+.crossIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #e4dcdcbf;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(20px, -23px);
 }
