--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,58 +1,44 @@
 .searchWrapper {
-  min-width: 375px;
-  height: 41px;
-  display: flex;
-  justify-content: space-between;
-  gap: 15px;
+  width: 375px;
+  height: 50px;
   position: fixed;
-  bottom: 80px;
+  bottom: 40px;
   left: 20px;
   z-index: 1000;
 }
 
-.toggleTrigger {
-  width: 45px;
-  height: 41px;
-  background: white;
-  border-radius: 50%;
-  cursor: pointer;
-  border: double 3px transparent;
-  background-image: linear-gradient(white, white),
-    linear-gradient(to right, #e0e0e0, #f0f0f0);
-  background-origin: border-box;
-  background-clip: padding-box, border-box;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.searchWrapper.hidden {
+  height: 0px;
 }
 
 .searchContainer {
-  flex: 1;
-  order: 2;
   position: relative;
+  width: 100%;
 }
 
 .aiSearchBarHeader {
   position: absolute;
   top: 0rem;
   transition-duration: 0.5s;
-  left: 0;
+  left: 0px;
   height: 38px;
-  width: 0px;
+  width: 100%;
   overflow: hidden;
   background: linear-gradient(white, white) padding-box,
     linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%) border-box;
   border-radius: 25px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  border: 3px solid transparent;
+  padding: 3px;
 }
 
 .aiSearchBarHeader.expanded {
-  width: 100%;
-  border: 3px solid transparent;
-  padding: 3px;
   animation: expandWidth 1.2s ease forwards;
 }
+.aiSearchBarHeader.contract {
+  animation: contractWidth 1.2s ease forwards;
+}
+
 .aiSearchBarHeader.slideTop {
   animation: slideUp 1s ease forwards;
 }
@@ -61,7 +47,6 @@
   display: flex;
   align-items: center;
   height: 100%;
-  opacity: 0;
   white-space: nowrap;
   gap: 5px;
 }
@@ -69,7 +54,7 @@
 .aiSearchBarHeader.expanded .searchInputWrapper {
   opacity: 1;
   width: 100%;
-  transition-delay: 5s;
+  transition-delay: 0s;
 }
 
 .imageIcon {
@@ -246,6 +231,26 @@
   border-radius: 4px;
 }
 
+.skeletonSquareContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.crossIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #e4dcdcbf;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(20px, -23px);
+}
 @keyframes slideUp {
   0% {
     top: 0rem;
@@ -256,10 +261,18 @@
 }
 @keyframes expandWidth {
   0% {
-    width: 30%;
+    width: 10%;
   }
   100% {
     width: 100%;
+  }
+}
+@keyframes contractWidth {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 10%;
   }
 }
 
@@ -294,25 +307,4 @@
   100% {
     background-position: -200% 0;
   }
-}
-
-.skeletonSquareContainer {
-  width: 100%;
-  height: 100%;
-}
-
-.crossIcon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #e4dcdcbf;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translate(20px, -23px);
 }
