--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,10 +1,10 @@
 .searchWrapper {
-  width: 375px;
-  height: 50px;
-  position: fixed;
-  bottom: 40px;
-  left: 20px;
-  z-index: 1000;
+  width: 375px !important;
+  height: 50px !important;
+  position: fixed !important;
+  bottom: 40px !important;
+  left: 20px !important;
+  z-index: 1000 !important;
 }
 
 .searchWrapper.hidden {
@@ -12,18 +12,18 @@
 }
 
 .searchContainer {
-  position: relative;
-  width: 100%;
+  position: relative !important;
+  width: 100% !important;
 }
 
 .aiSearchBarHeader {
-  position: absolute;
+  position: absolute !important;
   top: 0rem;
   transition-duration: 0.5s;
   left: 0px;
-  height: 38px;
+  height: 38px !important;
   width: 100%;
-  overflow: hidden;
+  overflow: hidden !important;
   background: linear-gradient(white, white) padding-box,
     linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%) border-box;
   border-radius: 25px;
@@ -42,65 +42,76 @@
 .aiSearchBarHeader.slideTop {
   animation: slideUp 1s ease forwards;
 }
+.aiSearchBarHeader.slideDown {
+  animation: slideDown 1s ease forwards;
+}
 
 .searchInputWrapper {
-  display: flex;
-  align-items: center;
-  height: 100%;
+  display: flex !important;
+  align-items: center !important;
+  height: 100% !important;
   white-space: nowrap;
-  gap: 5px;
+  gap: 5px !important;
 }
 
 .aiSearchBarHeader.expanded .searchInputWrapper {
   opacity: 1;
-  width: 100%;
+  width: 100% !important;
   transition-delay: 0s;
 }
 
 .imageIcon {
-  color: #666;
-  font-size: 20px;
-  cursor: pointer;
-  padding-top: 2px;
+  color: #666 !important;
+  font-size: 20px !important;
+  cursor: pointer !important;
+  padding-top: 2px !important;
 }
 .imageIconRounded {
-  color: #666;
-  font-size: 20px;
-  cursor: pointer;
-  padding-left: 10px;
+  color: #666 !important;
+  font-size: 20px !important;
+  cursor: pointer !important;
+  padding-left: 10px !important;
 }
 .searchIcon {
-  display: flex;
-  color: #666;
-  font-size: 20px;
-  cursor: pointer;
-  padding-right: 10px;
+  display: flex !important;
+  color: #666 !important;
+  font-size: 20px !important;
+  cursor: pointer !important;
+  padding-right: 10px !important;
 }
 .aiSearchBarInput {
-  flex: 1;
-  border: none;
-  outline: none;
-  font-size: 15px;
-  background: transparent;
-  min-width: 0;
-  color: transparent;
-  background: linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%);
+  flex: 1 !important;
+  border: none !important;
+  outline: none !important;
+  font-size: 15px !important;
+  background: transparent !important;
+  min-width: 0 !important;
+  background: linear-gradient(
+    90deg,
+    #2c9adf 0%,
+    #6385d4 50%,
+    #ce6882 100%
+  ) !important;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  caret-color: #000;
+  -webkit-text-fill-color: transparent !important;
+  background-clip: text !important;
 }
 
 .aiSearchBarInput::placeholder {
-  color: transparent;
-  background: linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  color: transparent !important;
+  background: linear-gradient(
+    90deg,
+    #2c9adf 0%,
+    #6385d4 50%,
+    #ce6882 100%
+  ) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+  background-clip: text !important;
 }
 
 .aiSearchResultsContainer {
-  background-color: #ffffffbf;
+  background-color: #ffffffbf !important;
   backdrop-filter: blur(10px);
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -118,7 +129,7 @@
     #2c9adf 0%,
     #6385d4 50%,
     #ce6882 100%
-  );
+  ) !important;
 }
 .aiSearchResultsContainer.visibile {
   animation: visibility 0.8s ease forwards;
@@ -129,74 +140,73 @@
 }
 
 .aiSearchBarResponse {
-  margin: 12px;
-  height: 100%;
-  position: relative;
+  margin: 12px !important;
+  height: 100% !important;
+  position: relative !important;
 }
 
 .hideOverFlow {
-  overflow-y: auto;
-  height: 85%;
-  scrollbar-width: thin;
-  scrollbar-color: #ffffff4d;
-  padding: 8px;
+  overflow-y: auto !important;
+  height: 85% !important;
+  scrollbar-width: thin !important;
+  scrollbar-color: #ffffff4d !important;
+  padding: 8px !important;
 }
 
 .aiSearchBarResponse p {
-  color: #000;
-  font-size: 14px;
-  line-height: 16.8px;
-  padding-bottom: 16px;
+  font-size: 14px !important;
+  line-height: 16.8px !important;
+  padding-bottom: 16px !important;
 }
 
 .aiSearchBarLink {
-  display: flex;
-  align-items: center;
-  gap: 6px;
+  display: flex !important;
+  align-items: center !important;
+  gap: 6px !important;
 }
 
 .aiSearchBarLinkContent {
-  flex: 1;
+  flex: 1 !important;
 }
 
 .description {
-  margin: 0;
-  font-size: 14px;
-  margin-left: 23px;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 3;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-  box-orient: vertical;
+  margin: 0 !important;
+  font-size: 14px !important;
+  margin-left: 23px !important;
+  display: -webkit-box !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  -webkit-line-clamp: 3 !important;
+  line-clamp: 2 !important;
+  -webkit-box-orient: vertical !important;
+  box-orient: vertical !important;
 }
 
 .aiSearchBarLink a {
-  color: #000;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  margin-bottom: 4px;
-  display: block;
+  color: #000 !important;
+  text-decoration: none !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  margin-bottom: 4px !important;
+  display: block !important;
 }
 
 .aiSearchBarLink p {
-  color: #000;
-  font-size: 13px;
-  margin: 0;
+  color: #000 !important;
+  font-size: 13px !important;
+  margin: 0 !important;
 }
 
 .linkIcon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #e4dcdcbf;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background: #e4dcdcbf !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+  backdrop-filter: blur(10px) !important;
+  border-radius: 50% !important;
+  width: 20px !important;
+  height: 20px !important;
 }
 
 .skeletonSquare {
@@ -211,16 +221,16 @@
   );
   background-size: 200% 100%;
   animation: skeleton-loading 1.5s infinite;
-  border-radius: 4px;
-  margin: 8px 0;
+  border-radius: 4px !important;
+  margin: 8px 0 !important;
 }
 
 .skeleton {
   display: block;
   width: 100%;
   flex: 1;
-  height: 95px;
-  margin: 8px 0;
+  height: 95px !important;
+  margin: 8px 0 !important;
   background: linear-gradient(
     -90deg,
     rgba(81, 80, 80, 0.1) 25%,
@@ -229,7 +239,7 @@
   );
   background-size: 200% 100%;
   animation: skeleton-loading 1.5s infinite;
-  border-radius: 4px;
+  border-radius: 4px !important;
 }
 
 .skeletonSquareContainer {
@@ -241,7 +251,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #e4dcdcbf;
+  background: #e4dcdcbf !important;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border-radius: 50%;
@@ -258,6 +268,14 @@
   }
   100% {
     top: -19.5rem;
+  }
+}
+@keyframes slideDown {
+  0% {
+    top: -19.5rem;
+  }
+  100% {
+    top: 0rem;
   }
 }
 @keyframes expandWidth {
