--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -8,12 +8,13 @@
 }
 
 .searchWrapper.hidden {
-  height: 0px;
+  height: 0px !important;
 }
 
 .searchContainer {
   position: relative !important;
   width: 100% !important;
+  height: 50px !important;
 }
 
 .aiSearchBarHeader {
@@ -21,7 +22,7 @@
   top: 0rem;
   transition-duration: 0.5s;
   left: 0px;
-  height: 38px !important;
+  height: 48px !important;
   width: 100%;
   overflow: hidden !important;
   background: linear-gradient(white, white) padding-box,
@@ -29,7 +30,7 @@
   border-radius: 25px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
   border: 3px solid transparent;
-  padding: 3px;
+  padding: 3px !important;
 }
 
 .aiSearchBarHeader.expanded {
@@ -52,6 +53,10 @@
   height: 100% !important;
   white-space: nowrap;
   gap: 5px !important;
+  padding-left: 10px !important;
+}
+.searchInputWrapper > *:first-child {
+  flex-shrink: 0; /* Prevent shrinking of the first child */
 }
 
 .aiSearchBarHeader.expanded .searchInputWrapper {
@@ -70,7 +75,9 @@
   color: #666 !important;
   font-size: 20px !important;
   cursor: pointer !important;
-  padding-left: 10px !important;
+
+  height: 20px !important;
+  width: 20px !important;
 }
 .searchIcon {
   display: flex !important;
@@ -95,6 +102,10 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent !important;
   background-clip: text !important;
+  line-height: 23px !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  height: 25px !important;
 }
 
 .aiSearchBarInput::placeholder {
@@ -152,6 +163,9 @@
   scrollbar-color: #ffffff4d !important;
   padding: 8px !important;
 }
+.hideOverFlow p {
+  color: #000 !important;
+}
 
 .aiSearchBarResponse p {
   font-size: 14px !important;
@@ -180,6 +194,7 @@
   line-clamp: 2 !important;
   -webkit-box-orient: vertical !important;
   box-orient: vertical !important;
+  color: #000000 !important;
 }
 
 .aiSearchBarLink a {
@@ -280,7 +295,7 @@
 }
 @keyframes expandWidth {
   0% {
-    width: 10%;
+    width: 13%;
   }
   100% {
     width: 100%;
@@ -291,7 +306,7 @@
     width: 100%;
   }
   100% {
-    width: 10%;
+    width: 13%;
   }
 }
 
