--- a/example/src/index.css
+++ b/example/src/index.css
@@ -8,9 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
+/* * {
   box-sizing: border-box !important;
-}
+} */
 iframe {
   display: none;
 }
