--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -32,9 +32,29 @@
   border: 3px solid transparent;
   padding: 3px !important;
 }
-
+.aiSearchBarHeaderWithoutBoxSizing {
+  position: absolute !important;
+  top: 0rem;
+  transition-duration: 0.5s;
+  left: 0px;
+  height: 38px !important;
+  width: 100%;
+  overflow: hidden !important;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(90deg, #2c9adf 0%, #6385d4 50%, #ce6882 100%) border-box;
+  border-radius: 25px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  border: 3px solid transparent;
+  padding: 3px !important;
+}
+.aiSearchBarHeaderWithoutBoxSizing.expandWidthwithoutBoxSizing {
+  animation: expandWidthwithoutBoxSizing 1.2s ease forwards;
+}
 .aiSearchBarHeader.expanded {
   animation: expandWidth 1.2s ease forwards;
+}
+.aiSearchBarHeaderWithoutBoxSizing.contractWidthWithoutBoxSizing {
+  animation: contractWidthWithoutBoxSizing 1.2s ease forwards;
 }
 .aiSearchBarHeader.contract {
   animation: contractWidth 1.2s ease forwards;
@@ -64,6 +84,11 @@
   width: 100% !important;
   transition-delay: 0s;
 }
+.aiSearchBarHeader.expandWidthwithoutBoxSizing .searchInputWrapper {
+  opacity: 1;
+  width: 100% !important;
+  transition-delay: 0s;
+}
 
 .imageIcon {
   color: #666 !important;
@@ -75,7 +100,6 @@
   color: #666 !important;
   font-size: 20px !important;
   cursor: pointer !important;
-
   height: 20px !important;
   width: 20px !important;
 }
@@ -84,7 +108,7 @@
   color: #666 !important;
   font-size: 20px !important;
   cursor: pointer !important;
-  padding-right: 10px !important;
+  padding-right: 12px !important;
 }
 .aiSearchBarInput {
   flex: 1 !important;
@@ -295,7 +319,15 @@
 }
 @keyframes expandWidth {
   0% {
-    width: 13%;
+    width: 10%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes expandWidthwithoutBoxSizing {
+  0% {
+    width: 10%;
   }
   100% {
     width: 100%;
@@ -307,6 +339,14 @@
   }
   100% {
     width: 13%;
+  }
+}
+@keyframes contractWidthWithoutBoxSizing {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 10%;
   }
 }
 
