--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -208,6 +208,173 @@
   width: 20px !important;
   height: 20px !important;
 }
+.crossIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #e4dcdcbf !important;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(20px, -23px);
+}
+.loadingContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.baseStarDiv {
+  position: relative;
+  overflow: hidden;
+}
+.baseStar {
+  animation: rotate 3s linear infinite;
+}
+
+.overlayStars {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+.overlayStars {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
+}
+
+.star {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  animation: starSequence 3s ease infinite;
+}
+
+/* Different delays for each star */
+.star:nth-child(1) {
+  animation-delay: 0s;
+}
+.star:nth-child(2) {
+  animation-delay: 1s;
+}
+.star:nth-child(3) {
+  animation-delay: 2s;
+}
+.star:nth-child(4) {
+  animation-delay: 3s;
+}
+.star:nth-child(5) {
+  animation-delay: 4s;
+}
+
+@keyframes starSequence {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+  20% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  40% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  60% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes slideUp {
+  0% {
+    top: 0rem;
+  }
+  100% {
+    top: -19.5rem;
+  }
+}
+@keyframes slideDown {
+  0% {
+    top: -19.5rem;
+  }
+  100% {
+    top: 0rem;
+  }
+}
+@keyframes expandWidth {
+  0% {
+    width: 10%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes contractWidth {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 10%;
+  }
+}
+@keyframes visibility {
+  0% {
+    opacity: 0;
+    bottom: -60%;
+  }
+
+  25% {
+    opacity: 0.2;
+    bottom: -60%;
+  }
+
+  50% {
+    opacity: 0.4;
+  }
+
+  75% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+    bottom: 100%;
+  }
+}
+@keyframes skeleton-loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
 
 .skeletonSquare {
   display: block;
@@ -245,85 +412,4 @@
 .skeletonSquareContainer {
   width: 100%;
   height: 100%;
-}
-
-.crossIcon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #e4dcdcbf !important;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translate(20px, -23px);
-}
-@keyframes slideUp {
-  0% {
-    top: 0rem;
-  }
-  100% {
-    top: -19.5rem;
-  }
-}
-@keyframes slideDown {
-  0% {
-    top: -19.5rem;
-  }
-  100% {
-    top: 0rem;
-  }
-}
-@keyframes expandWidth {
-  0% {
-    width: 10%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-@keyframes contractWidth {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 10%;
-  }
-}
-
-@keyframes visibility {
-  0% {
-    opacity: 0;
-    bottom: -60%;
-  }
-
-  25% {
-    opacity: 0.2;
-    bottom: -60%;
-  }
-
-  50% {
-    opacity: 0.4;
-  }
-
-  75% {
-    opacity: 0.6;
-  }
-
-  100% {
-    opacity: 1;
-    bottom: 100%;
-  }
-}
-@keyframes skeleton-loading {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: -200% 0;
-  }
 }
