--- a/example/src/index.css
+++ b/example/src/index.css
@@ -20,14 +20,14 @@ code {
 .container {
   display: flex;
   flex-direction: column;
-  height: 1000vh;
+  height: 500vh;
 }
 
 .innerContainer {
   flex: 1;
   /* background: linear-gradient(90deg, rgba(173,169,245,1) 10%, rgba(236,62,62,1) 75%); */
   background-image: url('https://images.picxy.com/cache/2020/8/9/7c75c5fda069749c654bd2d37b8b1d75.webp');
-  height: 100%;
+  height: 600px;
 }
 
 .navbar {
@@ -40,6 +40,12 @@ code {
   gap: 80px;
   background-color: aliceblue;
   /* position: relative */
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+  }
 }
 
 .list {
