--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -692,3 +692,13 @@ input[type='text'] {
     opacity: 1;
   }
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7); /* semi-transparent black */
+  z-index: 1000; /* high enough to appear above other content */
+}
