--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -5,7 +5,7 @@
   bottom: 40px;
   left: 20px !important;
   z-index: 1000 !important;
-  font-family: inherit !important;
+  font-family: var(--inheritFontFamily) !important;
   font-weight: 400 !important;
 }
 
@@ -173,7 +173,7 @@
 }
 
 input[type='text'] {
-  font-family: inherit !important;
+  font-family: var(--inheritFontFamily) !important;
   font-weight: 400 !important;
   padding-left: 10px !important;
 }
@@ -594,7 +594,7 @@ input[type='text'] {
   left: 50% !important;
   transform: translateX(-50%) !important;
   z-index: 1000 !important;
-  font-family: inherit !important;
+  font-family: var(--inheritFontFamily) !important;
   font-weight: 400 !important;
   border: 5px solid var(--shadowColor) !important;
   padding: 20px !important;
